--- a/qr-code-component-main/mobile.css
+++ b/qr-code-component-main/mobile.css
@@ -48,7 +48,7 @@ body{
     margin: 1.5rem 2rem  3rem;
 }
 .attribution a{
-    margin: 2rem auto;
+    margin: 0 1rem;
     text-decoration: none;
     font-family: 'Outfit', sans-serif;
     font-weight: bold;
